--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
   "scripts": {
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "serve": "vue-cli-service serve",
-    "test:e2e": "vue-cli-service test:e2e",
-    "test:unit": "vue-cli-service test:unit"
+    "serve": "vue-cli-service serve"
   },
   "config": {
     "coreui_library_short_version": "4.1"
